--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -174,7 +174,8 @@
 
 .greedy-nav {
   position: relative;
-  min-width: 250px;
+  min-width: 0;
+  width: 100%;
   background: $background-color;
 
   a {
